<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ab_background_textured_cype"
        android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
        android:contentDescription="@string/prof_pic_desc" />

        <Button
            android:id="@+id/browse"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
             style="@style/DefaultButton"
            android:text="@string/browse"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/upload"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-81dp"
            android:layout_marginTop="59dp"
            style="@style/DefaultButton"
            android:text="@string/upload"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/file_name"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/sel_ph"
            android:textColor="@color/feed_line"
            android:textColorHint="@color/feed_line"
            android:textColorLink="@color/feed_line" />

    </TableRow>

    <Button
        android:id="@+id/finish_upload"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@color/light_blue"
        android:text="@string/finish_upload"
        android:textColor="@color/white" />

</RelativeLayout>