<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ClubDetails" >
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/club_details"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/clubs_bar" />\

     <TextView
             android:id="@+id/det_club_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/club_name"
			 android:layout_marginTop="50dp"/>
     
      <TextView
             android:id="@+id/det_address"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/club_address" 
             android:layout_marginTop="100dp"/>
      
        <Button
        android:id="@+id/map_view"
        style="@style/DefaultButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/map_view"
        android:textColor="@color/white"
        android:layout_marginTop="150dp" />

</RelativeLayout>
