<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:orientation="vertical" >

     <com.facebook.widget.LoginButton
         android:id="@+id/authButton"
         android:layout_width="wrap_content"
         android:layout_height="45dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginLeft="55dp"
         android:layout_marginTop="70dp"
         android:textSize="12sp" />

    <EditText
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:layout_marginTop="10dip"
        android:background="@drawable/sh_file"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="textEmailAddress"
        android:minHeight="45dp"
        android:padding="7dp"
        android:singleLine="true"
        android:textColor="@color/clubs_bar" >

        <requestFocus />
    </EditText>

<EditText
    android:id="@+id/login_password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dip"
    android:layout_marginTop="5dip"
    android:background="@drawable/sh_file"
    android:hint="@string/password_hint"
    android:inputType="textPassword"
    android:minHeight="45dp"
    android:padding="7dp"
    android:singleLine="true">
        
        <requestFocus />
   </EditText>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="left"
        android:text="@string/sign_up"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/tell_us" />

    <TextView
        android:id="@+id/sign_with_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginRight="5dp"
        android:layout_toLeftOf="@+id/sign_up"
        android:text="@string/sign_with_facebook"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/clubs_bar" />

</RelativeLayout>

<Button
    android:id="@+id/submit"
    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:layout_marginTop="20dp"
	 style="@style/DefaultButton"
    android:text="@string/submit"
    android:textColor="@color/white" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
       style="@style/DefaultButton"
        android:text="@string/cancel"
        android:textColor="@color/white" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:src="@drawable/poweredby_google" />

</LinearLayout>
